--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
+  <script type="module">
 
  // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.2.0/firebase-app.js";
