--- a/web/index.html
+++ b/web/index.html
@@ -31,19 +31,19 @@
 </head>
 <body>
 
-<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
-
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
 
- // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.2.0/firebase-app.js";
+<script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.4.1/firebase-app.js";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
+
+  "https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"
+  "https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"
+  "https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"
 
   // Your web app's Firebase configuration
   const firebaseConfig = {
@@ -53,11 +53,13 @@
     projectId: "organyze-bullet",
     storageBucket: "organyze-bullet.appspot.com",
     messagingSenderId: "706502382471",
-    appId: "1:706502382471:web:92337d027cda0bc4e0b922"
+    appId: "1:706502382471:web:eed61d5014914c80e0b922"
   };
 
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
+</script>
+
 
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
