--- a/web/index.html
+++ b/web/index.html
@@ -41,7 +41,7 @@
   <script type="module">
 
  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/9.2.0/firebase-app.js";
+  //import { initializeApp } from "https://www.gstatic.com/firebasejs/9.2.0/firebase-app.js";
   // TODO: Add SDKs for Firebase products that you want to use
   // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -57,7 +57,7 @@
   };
 
   // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
+  const app = firebase.initializeApp(firebaseConfig);
 
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
