--- a/web/index.html
+++ b/web/index.html
@@ -38,8 +38,8 @@
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script type="module">
-
+  
+<script type="module">
  // Import the functions you need from the SDKs you need
   //import { initializeApp } from "https://www.gstatic.com/firebasejs/9.2.0/firebase-app.js";
   // TODO: Add SDKs for Firebase products that you want to use
@@ -58,7 +58,10 @@
 
   // Initialize Firebase
   const app = firebase.initializeApp(firebaseConfig);
+</script>
 
+<script>
+  
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
     function loadMainDartJs() {
