same test picking, signing changed

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-signin-client_id" content="706502382471-hjfe1om0lgci2n3mbhrai061gfiih3dh.apps.googleusercontent.com">
+
     <title>Welcome to Firebase Hosting</title>
 
     <!-- update the version number as needed -->
